월별소비확인추가

--- a/src/pages/Home/Calendar.scss
+++ b/src/pages/Home/Calendar.scss
@@ -86,7 +86,7 @@
   align-items: center;
 }
 .react-calendar__month-view__days__day--weekend {
-  color: #d10000;
+  -color: #d10000;
 }
 
 .react-calendar__month-view__days__day--neighboringMonth {
