수정사항확인및정리

--- a/src/pages/Home/Calendar.scss
+++ b/src/pages/Home/Calendar.scss
@@ -71,6 +71,10 @@
   padding: 0.5em;
 }
 
+abbr[title] {
+  text-decoration: none;
+}
+
 .react-calendar__month-view__weekNumbers .react-calendar__tile {
   display: flex;
   align-items: center;
