--- a/src/pages/Home/Calendar.scss
+++ b/src/pages/Home/Calendar.scss
@@ -6,7 +6,7 @@
   line-height: 1.125em;
   position:absolute;
   top:10%;
-  border-radius: 15px;
+  border-radius: 15px 15px 0 0;
 }
 
 .react-calendar--doubleView {
