--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,26 @@ html {
 .table-row {
   cursor: pointer;
 }
+
+/* 로딩 애니메이션 */
+.loading-animation {
+  display: inline-block;
+  font-size: 20px;
+  animation: bounce 0.6s infinite ease-in-out;
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0px);
+  }
+  25% {
+    transform: translateY(-5px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  75% {
+    transform: translateY(-5px);
+  }
+}
