--- a/src/index.css
+++ b/src/index.css
@@ -19,21 +19,17 @@ html {
 .loading-animation {
   display: inline-block;
   font-size: 20px;
-  animation: bounce 0.6s infinite ease-in-out;
+  animation: bounce 0.7s infinite;
 }
 
 @keyframes bounce {
   0%,
   100% {
-    transform: translateY(0px);
-  }
-  25% {
-    transform: translateY(-5px);
+    transform: translateY(-1.5%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
   }
   50% {
-    transform: translateY(-10px);
-  }
-  75% {
-    transform: translateY(-5px);
+    transform: none;
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
 }
